--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -11,7 +11,7 @@ spec:
   template:
     metadata:
       labels:
-        app: upload-server  # Check the changed name
+        app: upload-server 
     spec:
       containers:
         - name: upload-server
