--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -11,7 +11,7 @@ spec:
   template:
     metadata:
       labels:
-        app: upload-server # 3
+        app: upload-server # test3
     spec:
       containers:
         - name: upload-server
