--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -39,7 +39,7 @@ jobs:
     - name: ✅ Run Unit Tests
       run: |
         pip install pytest
-        pytest upload-server/test_app.py || true    
+        pytest upload-server/test_app.py
 
     - name: 🐳 Build Docker Image
       run: |
