--- a/k8s/secret.yaml
+++ b/k8s/secret.yaml
@@ -1,9 +1,7 @@
-# secret.yaml
-
 apiVersion: v1
 kind: Secret
 metadata:
-  name: upload-server-secret
+  name: secure-upload-server-secret
 type: Opaque
 data:
-  SECRET_KEY: c2VjdXJlc2VjcmV0a2V5 # base64 encoded value of "securesecretkey"
+  SECRET_KEY: ZGNrcl9wYXRfdHNsaFIzTHZIOG9ud2RMZE05NFJPOEktRDhB
