--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,28 +1,30 @@
-# deployment.yaml
+# k8s/deployment.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: upload-server
+  name: secure-upload-server
+  labels:
+    app: secure-upload-server
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: upload-server
+      app: secure-upload-server
   template:
     metadata:
       labels:
-        app: upload-server # test3
+        app: secure-upload-server
     spec:
       containers:
-        - name: upload-server
-          image: deepakk2212/upload-server:v2
+        - name: secure-upload-server
+          image: deepakk2212/secure-upload-server:v1
           ports:
-            - containerPort: 80
+            - containerPort: 5000
           env:
             - name: SECRET_KEY
               valueFrom:
                 secretKeyRef:
-                  name: upload-server-secret
+                  name: secure-upload-server-secret
                   key: SECRET_KEY
           volumeMounts:
             - name: upload-volume
@@ -30,16 +32,16 @@ spec:
           livenessProbe:
             httpGet:
               path: /
-              port: 80
+              port: 5000
             initialDelaySeconds: 10
             periodSeconds: 30
           readinessProbe:
             httpGet:
               path: /
-              port: 80
+              port: 5000
             initialDelaySeconds: 5
             periodSeconds: 10
       volumes:
         - name: upload-volume
           persistentVolumeClaim:
-            claimName: upload-pvc
+            claimName: secure-upload-pvc
