--- a/k8s/pvc.yaml
+++ b/k8s/pvc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: upload-pvc
+  name: secure-upload-pvc
 spec:
   accessModes:
     - ReadWriteOnce
