Add GitHub Actions CI/CD workflow

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   devsecops:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest # test
 
     steps:
     - name: 📥 Checkout Repository
