--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -64,20 +64,20 @@ jobs:
 
       
       
-      # - name: 🔐 Setup kubeconfig, Namespace, and Secret
-      #   env:
-      #     KUBECONFIG_B64: ${{ secrets.KUBECONFIG }}
-      #     SECRET_KEY: ${{ secrets.UPLOAD_SECRET_KEY }}
-      #   run: |
-      #     mkdir -p $HOME/.kube
-      #     echo "$KUBECONFIG_B64" | base64 --decode > $HOME/.kube/config
-      #     echo "KUBECONFIG=$HOME/.kube/config" >> $GITHUB_ENV
+      - name: 🔐 Setup kubeconfig, Namespace, and Secret
+        env:
+          KUBECONFIG_B64: ${{ secrets.KUBECONFIG }}
+          SECRET_KEY: ${{ secrets.UPLOAD_SECRET_KEY }}
+        run: |
+          mkdir -p $HOME/.kube
+          echo "$KUBECONFIG_B64" | base64 --decode > $HOME/.kube/config
+          echo "KUBECONFIG=$HOME/.kube/config" >> $GITHUB_ENV
 
-      #     kubectl create namespace secure-upload --dry-run=client -o yaml | kubectl apply -f -
-      #     kubectl create secret generic secure-upload-server-secret \
-      #       --from-literal=SECRET_KEY="$SECRET_KEY" \
-      #       --namespace=secure-upload \
-      #       --dry-run=client -o yaml | kubectl apply -f -
+          kubectl create namespace secure-upload --dry-run=client -o yaml | kubectl apply -f -
+          kubectl create secret generic secure-upload-server-secret \
+            --from-literal=SECRET_KEY="$SECRET_KEY" \
+            --namespace=secure-upload \
+            --dry-run=client -o yaml | kubectl apply -f -
 
       # - name: 🚀 Deploy Kubernetes manifests
       #   run: kubectl apply -f k8s/
