--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -62,18 +62,19 @@ jobs:
       - name: 📤 Push Docker Image to DockerHub
         run: docker push deepakk2212/secure-upload-server:latest
 
-      - name: 🔐 Setup kubeconfig, Namespace, and Secret
-        env:
-          KUBECONFIG_B64: ${{ secrets.KUBECONFIG }}
-          SECRET_KEY: ${{ secrets.UPLOAD_SECRET_KEY }}
-        run: |
-          mkdir -p $HOME/.kube
-          echo "$KUBECONFIG_B64" | base64 --decode > $HOME/.kube/config
-          echo "KUBECONFIG=$HOME/.kube/config" >> $GITHUB_ENV
+      - name: ⚙️ Setup kind Kubernetes cluster
+        uses: engineerd/setup-kind@v0.5.0
+        with:
+          version: v0.17.0
 
+      - name: ⬆️ Load Docker image into kind cluster
+        run: kind load docker-image deepakk2212/secure-upload-server:latest
+
+      - name: 🌐 Create namespace and secret in kind cluster
+        run: |
           kubectl create namespace secure-upload --dry-run=client -o yaml | kubectl apply -f -
           kubectl create secret generic secure-upload-server-secret \
-            --from-literal=SECRET_KEY="$SECRET_KEY" \
+            --from-literal=SECRET_KEY="${{ secrets.UPLOAD_SECRET_KEY }}" \
             --namespace=secure-upload \
             --dry-run=client -o yaml | kubectl apply -f -
 
@@ -81,7 +82,7 @@ jobs:
         run: kubectl apply -f k8s/
 
       - name: 🗂️ Upload Security Scan Reports
-        uses: actions/upload-artifact@master
+        uses: actions/upload-artifact@v3
         with:
           name: scan-reports
           path: scan-reports/
@@ -89,8 +90,3 @@ jobs:
       # - name: 🔄 Trigger ArgoCD Sync
       #   if: success()
       #   run: curl -X POST ${{ secrets.ARGOCD_WEBHOOK }}
-
-# IMPORTANT:
-# Make sure your KUBECONFIG secret contains embedded certs/keys, created with:
-#   kubectl config view --raw | base64 -w0
-# This avoids errors like missing client cert/key files in the GitHub Actions environment.
