--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -41,7 +41,7 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
-          docker run --rm -e SONAR_HOST_URL="http://your-sonarqube-server" \
+          docker run --rm -e SONAR_HOST_URL="http://localhost:9000/" \
             -e SONAR_LOGIN="$SONAR_TOKEN" \
             -v "$PWD:/usr/src" sonarsource/sonar-scanner-cli \
             -Dsonar.projectKey=secure-upload-server \
