--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: secure-upload-server
+  name: secure-upload-server #test1
 spec:
   replicas: 1
   selector:
