--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Run Bandit
         run: bandit -r upload_server -f html -o bandit-report.html
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@master
         with:
           name: bandit-report
           path: bandit-report.html
